fix landing page horizontal scroll & change up the footer on mobile

--- a/src/global.css
+++ b/src/global.css
@@ -23,6 +23,7 @@
 @layer base {
 	:root {
 		@apply font-primary;
+		@apply scroll-smooth;
 
 		--background: 0 0% 100%;
 		--foreground: 240 10% 3.9%;
